# ChEMBL_data_preprocessing

./: README.md  classify.py  config.yaml  constants.py  io_utils.py  main.py  pipeline.py  pyproject.toml  requirements.txt  status_api.py  status_utils.py
data/input/independent/: activity_independent.csv.meta.yaml  assay_independent.csv.meta.yaml  document_independent.csv.meta.yaml  pairs_independent.csv.meta.yaml  status.csv  target_independent.csv  target_independent.csv.meta.yaml  testitem_independent.csv  testitem_independent.csv.meta.yaml
data/input/non_independent/: activity_non_independent.csv.meta.yaml  assay_non_independent.csv.meta.yaml  document_non_independent.csv.meta.yaml  pairs_non_independent.csv.meta.yaml  target_non_independent.csv  target_non_independent.csv.meta.yaml  testitem_non_independent.csv  testitem_non_independent.csv.meta.yaml
data/input/same_document/: activity_same_document.csv.meta.yaml  assay_same_document.csv.meta.yaml  document_same_document.csv.meta.yaml  pairs_same_document.csv.meta.yaml  status.csv  status1.csv  target_same_document.csv  target_same_document.csv.meta.yaml  testitem_same_document.csv.meta.yaml
data/output/independent/: activity.csv  activity.meta.yaml  (+10 more)
output/: activity.meta.yaml  assay.csv  assay.meta.yaml  document.csv  document.meta.yaml  system.csv  system.meta.yaml  target.csv  target.meta.yaml  testitem.meta.yaml
output/same_document/: testitem.csv
tests/: test_io_utils.py  test_main.py  test_pipeline.py  test_status_api.py  test_status_utils.py
tests/data/: activities.csv  pairs.csv  status.csv
(+28 files in other folders)
